RESOLVED FIXED199893
[macCatalyst] Unable to interact with YouTube video while it's playing
https://bugs.webkit.org/show_bug.cgi?id=199893
Summary [macCatalyst] Unable to interact with YouTube video while it's playing
Tim Horton
Reported 2019-07-17 18:10:31 PDT
[macCatalyst] Unable to interact with YouTube video while it's playing
Attachments
Patch (2.98 KB, patch)
2019-07-17 18:11 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-07-17 18:11:02 PDT
WebKit Commit Bot
Comment 2 2019-07-17 20:25:26 PDT
Comment on attachment 374360 [details] Patch Clearing flags on attachment: 374360 Committed r247557: <https://trac.webkit.org/changeset/247557>
WebKit Commit Bot
Comment 3 2019-07-17 20:25:27 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-07-17 20:26:17 PDT
Note You need to log in before you can comment on or make changes to this bug.